# fpga-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
fpga/: Cargo.toml
fpga-core/: Cargo.toml
fpga-core/src/: lib.rs
fpga-opae/: Cargo.toml  build.rs
fpga-opae/src/: accelerator.rs  bindings.rs  device.rs  errors.rs  filter.rs  lib.rs  properties.rs  resource.rs  token.rs
fpga-py/: Cargo.toml
fpga-py/src/: lib.rs
fpga-xrt/: Cargo.toml  build.rs
fpga-xrt/src/: bindings.rs  ffi.cc  ffi.h  ffi.rs  info.rs  ip.rs  kernel.rs  lib.rs  main.rs  xclbin.rs
fpga/src/: lib.rs
