[package]
name = "fpga-xrt"
version = "0.1.0"
edition = "2018"

[features]
default = []

[dependencies]
cxx = "1"
fpga-core = { path = "../fpga-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde"] }

[build-dependencies]
cc = "1"
cmake = "0.1"
cxx-build = "1"
glob = "0.3"
